# tunalab

./: .gitignore  .gitmodules  TODO.md  pyproject.toml  test.dashboard.yaml
CLIs/: _run_multi.py  benchmark_nn_modules.py  (+4 more)
catalogs/common/: pyproject.toml
catalogs/common/benchmarks/: bench_mlp.py  bench_rms_norm.py
catalogs/common/benchmarks/src/tunalab/modules/: bench_mlp.py  bench_rms_norm.py
catalogs/common/benchmarks/src/tunalab/nn_modules/: bench_mlp.py  bench_rms_norm.py
catalogs/common/benchmarks/src/tunalab/optimizers/: bench_adamw.py  bench_muon.py
catalogs/common/src/tunalab/daemon_hooks/: local_file.py
catalogs/common/src/tunalab/llm_compilers/: anthropic.py  openai.py
catalogs/common/src/tunalab/modules/activations/: relu2.py
catalogs/common/src/tunalab/modules/channel_mixing/: fp8_linear.py  glu.py  mlp.py
catalogs/common/src/tunalab/modules/norms/: rms_norm.py
catalogs/common/src/tunalab/modules/regularization/: drop_path.py  efficient_drop_path.py
catalogs/common/src/tunalab/modules/sequence_mixing/: causal_self_attention.py  flex_self_attention.py
catalogs/common/src/tunalab/nn_modules/channel_mixing/: fp8_linear.py  glu.py  mlp.py
catalogs/common/src/tunalab/optimizers/: adamw.py  muon.py
catalogs/common/src/tunalab/storage_backends/: local_filesystem.py
catalogs/common/src/tunalab/train_loops/: adaptive_gradient_clipping.py  base_loop.py  checkpoint_best_model.py  checkpoint_over_epochs.py  checkpoint_over_steps.py  device.py  early_stopping.py  elem_grad_clip.py  grad_accum.py  grad_norm_clip.py  gradient_monitoring.py  gradient_noise.py  gradient_skipping.py  learning_rate_logging.py  logging.py  loss_tracking.py  lr_scheduling.py  mixed_precision.py  multi_epoch.py  step_limiting.py  tqdm.py  validation.py  weight_monitoring.py
catalogs/common/tests/: conftest.py
catalogs/common/tests/modules/: test_causal_self_attention.py  test_drop_path.py  test_efficient_drop_path.py  test_flex_self_attention.py  test_fp8_linear.py  test_glu.py  test_mlp.py  test_relu2.py  test_rms_norm.py
catalogs/common/tests/nn_modules/: test_causal_self_attention.py  test_drop_path.py  test_efficient_drop_path.py  test_flex_self_attention.py  test_fp8_linear.py  test_glu.py  test_mlp.py  test_relu2.py  test_rms_norm.py
catalogs/common/tests/optimizers/: test_adamw.py  test_muon.py
catalogs/nlp/: pyproject.toml
catalogs/nlp/src/tunalab/: __init__.py
catalogs/nlp/src/tunalab/evaluations/: fill_in_the_blank.py  multiple_choice.py
catalogs/nlp/src/tunalab/pretokenized_data/: sequential.py  shard_io.py
catalogs/nlp/src/tunalab/tokenizers/: tiktoken.py
catalogs/nlp/tests/: conftest.py
catalogs/nlp/tests/modules/: test_fused_cross_entropy.py
catalogs/nlp/tests/nn_modules/: test_fused_cross_entropy.py
catalogs/nlp/tunalab/pretokenized_data/: shard_io.py
experiments/template_experiment/: main.py  multi-run.yaml  multi_run.yaml  pyproject.toml
experiments/template_experiment/scripts/: run_bulk_tests.sh
(+116 files in other folders)
