[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tunalab-common"
version = "0.1.0"
dependencies = [
    "tunalab-core",  # Depends on main package
    "triton; sys_platform != 'darwin'",  # Skip triton on macOS
]

[tool.setuptools.packages.find]
where = ["src"]