[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tunalab-nlp"
version = "0.1.0"
dependencies = [
    "tunalab-core",
    "tunalab-common",
    "datasets",
    "tiktoken",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tunalab", "tunalab.*"]