[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "template-experiment"
version = "0.1.0"
dependencies = [
    "tunalab-core",  # Includes tunalab.testing
    "tunalab-llm-compilation", 
    "tunalab-catalogs-common",
    "tunalab-catalogs-nlp",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tunalab", "tunalab.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]